Combining the run-java.sh, java-default-options.sh and container-limits.sh scripts into run-java.sh
references #2